tests/bugs/invalid-field-access/source.wolof.swa
laak:wolof;

tambali() lëmm {
  dencukaay i: lëmm = 10;
  wanel("%d", i.field);
  deloko 0;
}

